# molecular-topology-toolkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  charmm_parse.py  cli.py  pyproject.toml  requirements.txt  setup.py
docs/development/: adding_new_tools.md  coding_standards.md  modularity_guidelines.md
mdf-parser-cli/: LICENSE  NEC_test.mdf  README.md  build_exe.py  mdf_parser.py  mdf_parser.spec  requirements.txt  setup.py
mdf-parser-cli/parser/: __init__.py  mdf_parser.py  output_handler.py  topology.py
mdf-parser-cli/tests/: __init__.py  test_topology.py
parser/: __init__.py
tests/: test_charmm_parser.py  test_mdf_parser.py
tests/data/: test.mdf  test.prm
tools/: __init__.py  cli.py
tools/charmm_parser/: README.md  __init__.py  parser.py  parsers.py
tools/charmm_parser/tests/: test_charmm_parser.py
tools/mdf_parser/: README.md  __init__.py  mdf_parser.py  output_handler.py  parser.py  topology.py
tools/mdf_parser/tests/: test_mdf_parser.py
tools/parameter_checker/: README.md  __init__.py  parameter_checker.py
